--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                           <label for="name" class="col-form-label">Check Out</label>
                           <form>
                             <div class="row form-group">                                                               
-                                    <div class="input-group date" id="datepicker">
+                                    <div class="input-group date" id="datepicker1">
                                         <input type="text" class="form-control">
                                         <span class="input-group-append">
                                             <span class="input-group-text bg-white">
