--- a/index.html
+++ b/index.html
@@ -175,7 +175,12 @@
                         <div class="col-md-12 form-group">
                           <label for="message" class="col-form-label">Jumlah Tamu</label>
                           
-                          <input type="text" class="form-control" name="name" id="name">
+                          <select class="form-select" aria-label="Default select example">
+                            <option selected></option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                          </select>
                          
                         </div>
                       </div>
