--- a/review.html
+++ b/review.html
@@ -126,7 +126,7 @@
                               <div class="col-6 col-sm-4">
                                 <h6 class=" mb-2" style="color: #7985A2; font-weight: 450; line-height:25px;">Jumlah Tamu</h6>
                               </div>
-                              <div class="col-4">
+                              <div class="col-6 col-sm-4">
                                 <select class="form-select" aria-label="Default select example">
                                   <option selected></option>
                                   <option value="1">1</option>
@@ -141,7 +141,7 @@
                               <div class="col-6 col-sm-4">
                                 <h6 class=" mb-2" style="color: #7985A2; font-weight: 450; line-height:25px;">Tipe Kasur</h6>
                               </div>
-                              <div class="col-4">
+                              <div class="col-6 col-sm-4">
                                 <select class="form-select" aria-label="Default select example">
                                   <option selected></option>
                                   <option value="1">Small</option>
